<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/activity_book_appointment_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <TextView
                android:id="@+id/activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_dependency"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_logo_1" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/enter_name"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/activity_login_ip_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/enter_adhaar_number"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/adhaar_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/adhaar_number"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/update_adhaar_enter_mobile_number"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/activity_login_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_activity_mobile_number"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/activity_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/add_new_dependency"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>
</LinearLayout>