<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="esiapp.esi.ui.fragment.BookingConfirmedFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pop_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/otp_activity_manage_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/aadhaar_number_update_message"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/update_aadhaar_for"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aadhaar_number_update_message_1"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/update_adhaar_enter_adhaar_number"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/adhaar_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_activity_adhaar_number"
                android:inputType="number"
                android:maxLength="12"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/update_adhaar_enter_mobile_number"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number_code"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_activity_mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="17sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:paddingTop="20dp"
                android:text="@string/adhaar_number_agree"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:paddingTop="35dp"
                android:text="@string/otp_sending_message"
                android:textAlignment="center"
                android:textColor="@color/text_color_gray"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/next_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/update_aadhar_number"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>