<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="60dp"
    android:background="@drawable/curve_shap"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/custome_dialog_cancel_appointment"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:text="@string/custome_dialog_are_you_sure_want_to_cancel_this_appointment"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/custom_dialog_yes"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/custome_dialog_yes"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/custom_dialog_no"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/custome_dialog_no"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>